# mtcnn_esp32s3

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  models_develop.ipynb  mtcnn.ipynb  mtcnn.py  partitions.csv  utils.py
main/: CMakeLists.txt  Kconfig.projbuild  camera.c  camera.h  esp_main.h  file_server.c  main.cc  main_functions.cc  model_settings.h  utils.cc  utils.h
main/models/: models_settings.h  onet.c  onet_model_data.h  pnet_2.c  pnet_3.c  pnet_model_data.cc  pnet_model_data.h  rnet.c  rnet_model_data.cc  rnet_model_data.h
representative_dataset/: rename_script.sh
